interface AccountEntity {
    accountNumber: number;
    creationDateTime: Date;
    balance: number;
}

export type { AccountEntity };
